--- a/templates/base.html
+++ b/templates/base.html
@@ -1,47 +1,50 @@
+{% load static %}
+
 <!DOCTYPE html>
 
-<html lang = "ru">
+<html lang = "ru" class = "h-100">
     <head>
         <meta charset = "UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href = "../static/css/bootstrap.css" rel = "stylesheet">
-        <link href = "../static/css/base.css" rel = "stylesheet">
+        <link href = "{% static '/css/bootstrap.css' %}" rel = "stylesheet">
+        <link href = "{% static '/css/base.css' %}" rel = "stylesheet">
         <title>Базовая страница</title>
     </head>
+
     <body class = "d-flex flex-column h-100">
         <header>
             <div class = "container">
                 <div class = "row">
-                    <div class = "col">
-                        <a class = "navbar-brand headers" href = "index.html">
-                            <img src = "../images/logo.png">
+                    <div class = "col-3">
+                        <a class = "navbar-brand headers" href = "{% url 'index' %}">
+                            <img src = "{% static '/images/logo.png' %}">
                         </a>
                     </div>
 
-                    <div class = "col-4 text-center align-self-center">
+                    <div class = "col-5 text-center align-self-center">
                         <div class = "input-group">
                             <input type = "text" class = "form-control" placeholder = "Поиск по тегам">
-                            <button class = "btn btn-outline-secondary" style = "background-color: #ffffff" type = "button"><img src = "../images/search.png"></button>
+                            <button class = "btn btn-outline-secondary" style = "background-color: #ffffff" type = "button"><img src = "{% static '/images/search.png' %}"></button>
                         </div>
                     </div>
 
-                    <div class = "col align-self-center">
-                        <button class = "btn btn-primary" style = "background-color: rgb(245, 71, 65); border-color: #ff433d;" onclick = "document.location='ask.html'">
+                    <form class = "col-2 align-self-center" action = "{% url 'ask' %}">
+                        <button class = "btn btn-primary" style = "background-color: rgb(245, 71, 65); border-color: #ff433d;">
                                 Задать вопрос
                         </button>
-                    </div>
-
-                    <div class = "col-1 align-self-center text-end">
-                        <button class = "btn btn-primary" onclick = "document.location='login.html'">Вход</button>                                
-                    </div>
-                    <div class = "col-1 align-self-center text-end">
-                        <button class = "btn btn-light" onclick = "document.location='signup.html'">
+                    </form>
+                    {% if is_authorized %}
+                    <form class = "col-1 align-self-center text-end" action = "{% url 'login' %}">
+                        <button class = "btn btn-primary">Вход</button>
+                    </form>
+                    <form class = "col-1 align-self-center text-end" action = "{% url 'register' %}">
+                        <button class = "btn btn-light">
                             Регистрация
                         </button>                                   
-                    </div>
-
+                    </form>
+                    {% else %}
                     <div class = "col-1 align-self-center text-end">
-                        <img src = "../images/avatar.jpg" width = "50px" height = "50px" style = "border-radius: 8px;" onclick = "document.location='user.html'">                                
+                        <img src = "{% static '/images/avatar.jpg' %}" width = "50px" height = "50px" style = "border-radius: 8px;" onclick = "document.location='user.html'">
                     </div>
                     <div class = "col-1 align-self-center text-start">
                         <div class = "row btn text-start" onclick = "document.location='user.html'" style = "padding: 0">
@@ -51,13 +54,16 @@
                             Выход
                         </div>                          
                     </div>
+                    {% endif %}
                 </div>
-            </div>               
+            </div>
         </header>
 
-        <main style = "min-height: calc(100vh - 25px);">
+        <main>
             <div class = "container">
             <div class = "row justify-content-end" style = "padding-top: 2%">
+                {% block content %}
+                {% endblock %}
                 <div class = "col-3">
                     <p class = "bold_header text-center">Популярные теги</p>
                     <div class = "container">
@@ -93,9 +99,11 @@
             </div>
         </main>
 
-        <footer class = "text-center">
-            CodeResolve, 2023
+        <footer class = "footer mt-auto">
+            <div class = "container text-center">
+                CodeResolve, 2023
+            </div>
         </footer>
-        <script src = "../static/js/bootstrap.js"></script>
+        <script src = "{% static '/js/bootstrap.js' %}"></script>
     </body>
 </html>
