--- a/templates/index.html
+++ b/templates/index.html
@@ -1,297 +1,24 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 
-<html lang = "ru">
-    <head>
-        <meta charset = "UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href = "../static/css/bootstrap.css" rel = "stylesheet">
-        <link href = "../static/css/base.css" rel = "stylesheet">
-        <title>Главная страница</title>
-    </head>
-    <body class = "d-flex flex-column h-100"></body>
-        <header>
-            <div class = "container">
-                <div class = "row">
-                    <div class = "col-3">
-                        <a class = "navbar-brand headers" href = "index.html">
-                            <img src = "../images/logo.png">
-                        </a>
-                    </div>
+{% block content %}
+<div class = "bold_header" style = "padding-left: 0">Новые вопросы</div>
 
-                    <div class = "col-5 text-center align-self-center">
-                        <div class = "input-group">
-                            <input type = "text" class = "form-control" placeholder = "Поиск по тегам">
-                            <button class = "btn btn-outline-secondary" style = "background-color: #ffffff" type = "button"><img src = "../images/search.png"></button>
-                        </div>
-                    </div>
+<div class = "col">
+    {% for question in items %}
 
-                    <div class = "col-2 align-self-center">
-                        <button class = "btn btn-primary" style = "background-color: rgb(245, 71, 65); border-color: #ff433d;" onclick = "document.location='ask.html'">
-                                Задать вопрос
-                        </button>
-                    </div>
+    <!-- Список вопросов -->
+    {% include 'components/question_item_list.html' %}
 
-                    <div class = "col-1 align-self-center text-end">
-                        <img src = "../images/avatar.jpg" width = "50px" height = "50px" style = "border-radius: 8px;" onclick = "document.location='user.html'">                                
-                    </div>
-                    <div class = "col-1 align-self-center text-start">
-                        <div class = "row btn text-start" onclick = "document.location='user.html'" style = "padding: 0">
-                                Username
-                        </div>        
-                        <div class = "row btn" style = "color: #b80600; padding-bottom: 0; padding-top : 0" >
-                            Выход
-                        </div>                          
-                    </div>
-                </div>
-            </div>               
-        </header>
+    {% endfor %}
+    <!-- Пагинация -->
+    <div class = "row" style = "padding-bottom: 2%;">
+        <span class="text-center">
+            <form action = "{% url 'index' %}">
+                {% include 'components/pagination.html' %}
+            </form>
+        </span>
+    </div>
+</div>
 
-        <main>
-            <div class = "container">
-            <div class = "row justify-content-end" style = "padding-top: 2%">
-                <div class = "col">
-                    <div class = "row">
-                        <div class = "row bold_header">Новые вопросы</div>
-                    </div>
-                    <div class = "row" style = "padding-top: 2%; padding-bottom: 2%">
-                        <div class = "border rounded border-success">
-                            <div class = "row">
-                                <div class = "col-2 text-center" style = "margin: 10px; padding: 0px">
-                                    <img src = "../images/avatar.jpg" width = 100px heigth = 100px>
-                                    <div class = "row" style = "justify-content: center">
-                                        Username
-                                    </div>
-                                    <div class = "row" style = "padding-top: 5%">
-                                        <div class = "col text-end">
-                                            <button class = "btn btn-danger">-</button>
-                                        </div>
-                                        <div class = "col text-center" style = "font-size: 26px; color: green">1</div>
-                                        <div class = "col text-start align-self-center">
-                                            <button class = "btn btn-success">+</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class = "col-9" style = "margin-bottom: 10px; padding-left: 2%">
-                                    <div class = "row question_header">
-                                        <a href = "question.html" style = "padding: 0; padding-top: 1%">
-                                            Что такое Null Pointer Exception и как его исправить?
-                                        </a>                                        
-                                    </div>
-                                    <div class = "row">
-                                        Что из себя представляет исключение Null Pointer Exception (java.lang.NullPointerException) 
-                                        и почему оно может происходить? Какие методы и средства использовать, чтобы определить причину...
-                                    </div>
-                                    <div class = "row" style = "font-style: italic; padding-top: 2%">
-                                        Вопрос задан 30 сентября 2023 г. в 13:47
-                                    </div>
-                                    <div class = "row" style = "padding: 1%; padding-left: 0%">
-                                        <div class = "col" style = "padding-left: 0">
-                                            Теги:
-                                            <a href style = "padding-left: 1%;">
-                                                Java
-                                            </a>
-                                        </div>
-                                        <div class = "col text-end">
-                                            <a href = "question.html">
-                                                Ответы: 1
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class = "row" style = "padding-top: 2%; padding-bottom: 2%">
-                        <div class = "border rounded border-success">
-                            <div class = "row">
-                                <div class = "col-2 text-center" style = "margin: 10px; padding: 0px">
-                                    <img src = "../images/avatar.jpg" width = 100px heigth = 100px>
-                                    <div class = "row" style = "justify-content: center">
-                                        Username
-                                    </div>
-                                    <div class = "row" style = "padding-top: 5%">
-                                        <div class = "col text-end">
-                                            <button class = "btn btn-danger">-</button>
-                                        </div>
-                                        <div class = "col text-center" style = "font-size: 26px; color: green">1</div>
-                                        <div class = "col text-start align-self-center">
-                                            <button class = "btn btn-success">+</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class = "col-9" style = "margin-bottom: 10px; padding-left: 2%">
-                                    <div class = "row question_header">
-                                        <a href = "question.html" style = "padding: 0; padding-top: 1%">
-                                            Что такое Null Pointer Exception и как его исправить?
-                                        </a>                                        
-                                    </div>
-                                    <div class = "row">
-                                        Что из себя представляет исключение Null Pointer Exception (java.lang.NullPointerException) 
-                                        и почему оно может происходить? Какие методы и средства использовать, чтобы определить причину...
-                                    </div>
-                                    <div class = "row" style = "font-style: italic; padding-top: 2%">
-                                        Вопрос задан 30 сентября 2023 г. в 13:47
-                                    </div>
-                                    <div class = "row" style = "padding: 1%; padding-left: 0%">
-                                        <div class = "col" style = "padding-left: 0">
-                                            Теги:
-                                            <a href style = "padding-left: 1%;">
-                                                Java
-                                            </a>
-                                        </div>
-                                        <div class = "col text-end">
-                                            <a href = "question.html">
-                                                Ответы: 1
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class = "row" style = "padding-top: 2%; padding-bottom: 2%">
-                        <div class = "border rounded border-success">
-                            <div class = "row">
-                                <div class = "col-2 text-center" style = "margin: 10px; padding: 0px">
-                                    <img src = "../images/avatar.jpg" width = 100px heigth = 100px>
-                                    <div class = "row" style = "justify-content: center">
-                                        Username
-                                    </div>
-                                    <div class = "row" style = "padding-top: 5%">
-                                        <div class = "col text-end">
-                                            <button class = "btn btn-danger">-</button>
-                                        </div>
-                                        <div class = "col text-center" style = "font-size: 26px; color: green">1</div>
-                                        <div class = "col text-start align-self-center">
-                                            <button class = "btn btn-success">+</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class = "col-9" style = "margin-bottom: 10px; padding-left: 2%">
-                                    <div class = "row question_header">
-                                        <a href = "question.html" style = "padding: 0; padding-top: 1%">
-                                            Что такое Null Pointer Exception и как его исправить?
-                                        </a>                                        
-                                    </div>
-                                    <div class = "row">
-                                        Что из себя представляет исключение Null Pointer Exception (java.lang.NullPointerException) 
-                                        и почему оно может происходить? Какие методы и средства использовать, чтобы определить причину...
-                                    </div>
-                                    <div class = "row" style = "font-style: italic; padding-top: 2%">
-                                        Вопрос задан 30 сентября 2023 г. в 13:47
-                                    </div>
-                                    <div class = "row" style = "padding: 1%; padding-left: 0%">
-                                        <div class = "col" style = "padding-left: 0">
-                                            Теги:
-                                            <a href style = "padding-left: 1%;">
-                                                Java
-                                            </a>
-                                        </div>
-                                        <div class = "col text-end">
-                                            <a href = "question.html">
-                                                Ответы: 1
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class = "row" style = "padding-top: 2%; padding-bottom: 2%">
-                        <div class = "border rounded border-success">
-                            <div class = "row">
-                                <div class = "col-2 text-center" style = "margin: 10px; padding: 0px">
-                                    <img src = "../images/avatar.jpg" width = 100px heigth = 100px>
-                                    <div class = "row" style = "justify-content: center">
-                                        Username
-                                    </div>
-                                    <div class = "row" style = "padding-top: 5%">
-                                        <div class = "col text-end">
-                                            <button class = "btn btn-danger">-</button>
-                                        </div>
-                                        <div class = "col text-center" style = "font-size: 26px; color: green">1</div>
-                                        <div class = "col text-start align-self-center">
-                                            <button class = "btn btn-success">+</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class = "col-9" style = "margin-bottom: 10px; padding-left: 2%">
-                                    <div class = "row question_header">
-                                        <a href = "question.html" style = "padding: 0; padding-top: 1%">
-                                            Что такое Null Pointer Exception и как его исправить?
-                                        </a>                                        
-                                    </div>
-                                    <div class = "row">
-                                        Что из себя представляет исключение Null Pointer Exception (java.lang.NullPointerException) 
-                                        и почему оно может происходить? Какие методы и средства использовать, чтобы определить причину...
-                                    </div>
-                                    <div class = "row" style = "font-style: italic; padding-top: 2%">
-                                        Вопрос задан 30 сентября 2023 г. в 13:47
-                                    </div>
-                                    <div class = "row" style = "padding: 1%; padding-left: 0%">
-                                        <div class = "col" style = "padding-left: 0">
-                                            Теги:
-                                            <a href style = "padding-left: 1%;">
-                                                Java
-                                            </a>
-                                        </div>
-                                        <div class = "col text-end">
-                                            <a href = "question.html">
-                                                Ответы: 1
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class = "row" style = "padding-bottom: 2%;">
-                        <span class="text-center">
-                            <button class = "btn btn-outline-primary">1</button>
-                            <button class = "btn btn-outline-primary">2</button>
-                            <button class = "btn btn-outline-primary">3</button>
-                            <button class = "btn btn-outline-primary">></button>
-                        </span>
-                    </div>
-                </div>
-                <div class = "col-3" style = "margin-left: 2%">
-                    <p class = "bold_header text-center">Популярные теги</p>
-                    <div class = "container">
-                        <div class = "row text-start" style = "font-size: 18px; padding-top: 4%">
-                            <div class = "col-6" style = "color: blue">VK Education</div>
-                            <div class = "col-3" style = "color: rgb(56, 197, 150)">Chrome</div>
-                            <div class = "col-3" style = "color: rgb(46, 14, 105)">Golang</div>
-                        </div>
-                        <div class = "row text-start" style = "font-size: 18px; padding-top: 4%">
-                            <div class = "col-4" style = "color: rgb(226, 44, 44)">Java</div>
-                            <div class = "col-8" style = "color: rgb(41, 11, 11)">Машинное обучение</div>
-                        </div>
-                        <div class = "row text-start" style = "font-size: 18px; padding-top: 4%">
-                            <div class = "col" style = "color: rgb(145, 17, 219)">Алгоритмы</div>
-                            <div class = "col" style = "color: rgb(24, 202, 33)">C#</div>
-                            <div class = "col" style = "color: rgb(105, 58, 14)">ChatGPT</div>
-                        </div>
-                    </div>
 
-                    <div class = "bold_header text-center" style = "padding-top: 15%; padding-bottom: 3%">Лучшие участники</div>
-                    <ul style = "font-size: 18px">
-                        <li style = "padding-top: 1%">Джон фон Нейман</li>
-                        <li style = "padding-top: 1%">Эдсгер Вибе Дейкстра</li>
-                        <li style = "padding-top: 1%">Ада Лавлейс</li>
-                        <li style = "padding-top: 1%">Гордон Мур</li>
-                        <li style = "padding-top: 1%">Павел Дуров</li>
-                        <li style = "padding-top: 1%">Стив Джобс</li>
-                        <li style = "padding-top: 1%">Дженсен Хуанг</li>
-                        <li style = "padding-top: 1%">Лиза Су</li>
-                    </ul>
-                </div>
-            </div>
-            </div>
-        </main>
-
-        <footer class = "text-center">
-            CodeResolve, 2023
-        </footer>
-        <script src = "../static/js/bootstrap.js"></script>
-    </body>
-</html>
+{% endblock %}
