--- a/templates/components/question_item_page.html
+++ b/templates/components/question_item_page.html
@@ -8,13 +8,13 @@
         <div class = "col-2 text-center" style = "margin: 10px; padding: 0px">
             <img src = "{% static '/images/avatar.jpg' %}" width = 100px heigth = 100px>
             <div class = "row" style = "justify-content: center">
-                {{ question.user_name }}
+                {{ question.profile.user.username }}
             </div>
             <div class = "row" style = "padding-top: 5%">
                 <div class = "col text-end">
                     <button class = "btn btn-danger">-</button>
                 </div>
-                <div class = "col text-center" style = "font-size: 26px; color: green">1</div>
+                <div class = "col text-center" style = "font-size: 26px; color: green">{{ question.rating_count }}</div>
                 <div class = "col text-start align-self-center">
                     <button class = "btn btn-success">+</button>
                 </div>
@@ -25,14 +25,14 @@
                 {{ question.text }}
             </div>
             <div class = "row" style = "font-style: italic; padding-top: 5%">
-                {{ question.date }}
+                Вопрос добавлен {{ question.date }}
             </div>
         </div>
         <div class = "row" style = "padding: 1%; padding-left: 0%">
             <div class = "col" style = "padding-left: 2%">
                 Теги:
-                {% for tag in question.tags %}
-                <a href style = "padding-left: 1%;">
+                {% for tag in question.get_tags %}
+                <a href="{% url 'search' tag %}" style = "padding-left: 1%;">
                     {{ tag }}
                 </a>
                 {% endfor %}
