--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href = "{% static '/css/bootstrap.css' %}" rel = "stylesheet">
         <link href = "{% static '/css/base.css' %}" rel = "stylesheet">
-        <title>Базовая страница</title>
+        <title>CodeResolve</title>
     </head>
 
     <body class = "d-flex flex-column h-100">
