--- a/templates/question.html
+++ b/templates/question.html
@@ -4,7 +4,7 @@
 
 <div class = "col">
     {% include 'components/question_item_page.html' %}
-    <div class = "row question_header" style = "font-size: 24px;">
+    <div class = "row question_header" style = "font-size: 24px; padding-bottom: 2%">
         Ответы
     </div>
     {% for answer in items %}
