--- a/templates/components/answer_item.html
+++ b/templates/components/answer_item.html
@@ -1,50 +1,72 @@
 {% load static %}
+{% load extras %}
 
-<div class = "row" style = "padding-bottom: 2%; padding-right: 2%">
-    <div class = "border rounded border-success">
-        <div class = "row">
-            <div class = "col-2 text-center" style = "margin: 10px; padding: 0px">
-                <img src = "{% static '/images/question.png' %}" width = 100px heigth = 100px>
-                <div class = "row" style = "justify-content: center">
-                    {{ answer.profile.user.username }}
+<div class="row" style="padding-bottom: 2%; padding-right: 2%">
+    <div class="border rounded border-success">
+        <div class="row">
+            <div class="col-2 text-center" style="margin: 10px; padding: 0px">
+                <img src="{% static '/images/question.png' %}" width=100px height="100px">
+                <div class="row" style="justify-content: center">
+                    {{ answer.profile.login }}
                 </div>
-                <div class = "row" style = "padding-top: 5%">
-                    <div class = "col text-end">
-                        <button class = "btn btn-danger">-</button>
+                <div class="row" style="padding-top: 5%">
+                    <div class="col text-end" style="width: 36px">
+                        <button class="btn btn-danger"
+                                style="border-width: 2px; width: 36px; font-weight: bold; font-size: 16px">-
+                        </button>
                     </div>
-                    <div class = "col text-center" style = "font-size: 26px; color: green">{{ answer.rating_count }}</div>
-                    <div class = "col text-start align-self-center">
-                        <button class = "btn btn-success">+</button>
+                    <div class="col text-center"
+                         style="font-size: 26px; color: green; padding-left: 0; padding-right: 0">
+                        {{ answer.rating_count }}
+                    </div>
+                    <div class="col text-start align-self-center" style="width: 36px">
+                        <button class="btn btn-success"
+                                style="border-width: 2px; width: 36px; font-weight: bold; font-size: 16px">+
+                        </button>
                     </div>
                 </div>
             </div>
-            <div class = "col-9" style = "margin-bottom: 10px; padding-left: 2%; padding-top: 2%">
-                <div class = "row">
+
+            <div class="col-9" style="margin-bottom: 10px; padding-left: 2%; padding-top: 2%">
+                <a id="{{ answer.pk }}"></a>
+                <div class="row">
                     {{ answer.text }}
                 </div>
-                <div class = "row" style = "font-style: italic; padding-top: 2%">
+                <div class="row" style="font-style: italic; padding-top: 2%">
                     Ответ дан {{ answer.date }}
                 </div>
                 {% if answer.is_correct %}
-                <div class = "row" style = "padding-left: 0%; padding-top: 3%; padding-bottom: 2%">
-                    <div class = "col-4" style = "padding-left: 0">
-                        <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off" checked>
-                        <label class="btn btn-outline-success" for="btncheck1">Ответ был полезен</label>
+                <div class="row" style="padding-left: 0%; padding-top: 3%; padding-bottom: 2%">
+                    <div class="col-4" style="padding-left: 0">
+                        <input type="checkbox" class="btn-check" id={{ answer.pk }} autocomplete="off" checked disabled>
+                        <label class="btn btn-outline-success" for={{ answer.pk }}>Ответ был полезен</label>
                     </div>
-                    <div class = "col-3 text-start">
-                        <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off" disabled>
-                        <label class="btn btn-outline-danger" for="btncheck2">Ответ не помог</label>
+                    <div class="col-3 text-start">
+                        <input type="checkbox" class="btn-check" id={{ answer.pk|neg }} autocomplete="off" disabled>
+                        <label class="btn btn-outline-danger" for={{ answer.pk|neg }}>Ответ не помог</label>
+                    </div>
+                </div>
+                {% elif answer.is_correct == false %}
+                <div class="row" style="padding-left: 0%; padding-top: 3%; padding-bottom: 2%">
+                    <div class="col-4" style="padding-left: 0">
+                        <input type="checkbox" class="btn-check" id={{ answer.pk }} autocomplete="on">
+                        <label class="btn btn-outline-success" for={{ answer.pk }}>Ответ был полезен</label>
+                    </div>
+                    <div class="col-3 text-start">
+                        <input type="checkbox" class="btn-check" id={{ answer.pk|neg }} autocomplete="on">
+                        <label class="btn btn-outline-danger" for={{ answer.pk|neg }}>Ответ не помог</label>
                     </div>
                 </div>
                 {% else %}
-                <div class = "row" style = "padding-left: 0%; padding-top: 3%; padding-bottom: 2%">
-                    <div class = "col-4" style = "padding-left: 0">
-                        <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off" disabled>
-                        <label class="btn btn-outline-success" for="btncheck1">Ответ был полезен</label>
+                <div class="row" style="padding-left: 0%; padding-top: 3%; padding-bottom: 2%">
+                    <div class="col-4" style="padding-left: 0">
+                        <input type="checkbox" class="btn-check" id={{ answer.pk }} autocomplete="off" disabled>
+                        <label class="btn btn-outline-success" for={{ answer.pk }}>Ответ был полезен</label>
                     </div>
-                    <div class = "col-3 text-start">
-                        <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off" checked>
-                        <label class="btn btn-outline-danger" for="btncheck2">Ответ не помог</label>
+                    <div class="col-3 text-start">
+                        <input type="checkbox" class="btn-check" id={{ answer.pk|neg }} autocomplete="off" checked
+                               disabled>
+                        <label class="btn btn-outline-danger" for={{ answer.pk|neg }}>Ответ не помог</label>
                     </div>
                 </div>
                 {% endif %}
