--- a/templates/components/question_item_list.html
+++ b/templates/components/question_item_list.html
@@ -4,19 +4,25 @@
     <div class = "border rounded border-success">
         <div class = "row">
             <div class = "col-2 text-center" style = "margin: 10px; padding: 0px">
-                <img src = "{% static '/images/avatar.jpg' %}" width = 100px heigth = 100px>
+                <img src = "{% static '/images/avatar.jpg' %}" width = 100px height="100px">
                 <div class = "row" style = "justify-content: center">
-                    {{ question.profile.user.username }}
+                    {{ question.profile.login }}
                 </div>
-                <div class = "row" style = "padding-top: 5%">
-                    <div class = "col text-end">
-                        <button class = "btn btn-danger">-</button>
-                    </div>
-                    <div class = "col text-center" style = "font-size: 26px; color: green">{{ question.rating_count }}</div>
-                    <div class = "col text-start align-self-center">
-                        <button class = "btn btn-success">+</button>
-                    </div>
+                <div class="row" style="padding-top: 5%">
+                <div class="col text-end" style="width: 36px">
+                    <button class="btn btn-danger"
+                            style="border-width: 2px; width: 36px; font-weight: bold; font-size: 16px">-
+                    </button>
                 </div>
+                <div class="col text-center" style="font-size: 26px; color: green; padding-left: 0; padding-right: 0">
+                    {{ question.rating_count }}
+                </div>
+                <div class="col text-start align-self-center" style="width: 36px">
+                    <button class="btn btn-success"
+                            style="border-width: 2px; width: 36px; font-weight: bold; font-size: 16px">+
+                    </button>
+                </div>
+            </div>
             </div>
             <div class = "col-9" style = "margin-bottom: 10px; padding-left: 2%">
                 <div class = "row question_header">
