--- a/templates/login.html
+++ b/templates/login.html
@@ -3,27 +3,29 @@
 {% block content %}
 <div class = "col-4"></div>
 <div class = "col">
-    <div class = "mb-3 bold_header">
+    <div class = "mb-3 bold_header" style = "padding-bottom: 1%">
         Вход в аккаунт
     </div>
-    <form>
-        <div class="mb-3" style = "padding-top: 1%">
-            <label for="InputLogin" class="form-label">Введите логин:</label>
-            <div class = "col">
-                <input class="form-control" id="InputLogin" style = "width: 300px;" maxlength="30">
+    <form method="post">
+        {% csrf_token %}
+        {% for field in form %}
+        <div class="mb-3">
+            <div style = "padding-top: 1%" > {{ field.label }} </div>
+            <div class = "col fieldWrapper" style = "width: 300px;">
+                {{ field }}
+                <div style = "padding-top: 1%; color: red">
+                    {{ error }}
+                </div>
             </div>
         </div>
-        <div class="mb-3">
-            <label for="InputPassword" class="form-label">Введите пароль:</label>
-            <input type="password" class="form-control is-invalid" id="InputPassword" style = "width: 300px;" aria-describedby = "WrongPassword">
-            <div class="invalid-feedback" id = "WrongPassword">
-                Пожалуйста, проверьте правильность введенного пароля.
-            </div>
+        {% endfor %}
+        <div style = "color: red">
+            {{ form.non_field_errors }}
         </div>
         <button type="submit" class="btn btn-primary">Войти</button>
     </form>
     <div class = "row" style = "padding-top: 5%">
-        <a href = "{% url 'register' %}">
+        <a href = "{% url 'signup' %}">
             Еще нет аккаунта? Зарегистрируйтесь!
         </a>
     </div>
