--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    {% for question in items %}
+    {% for item in items %}
 
     <!-- Список вопросов -->
     {% include 'components/question_item_list.html' %}
