--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
     <div class = "mb-3 bold_header" style = "padding-bottom: 1%;">
         Регистрация на CodeResolve
     </div>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
         <div class="row mb-3">
