--- a/templates/base.html
+++ b/templates/base.html
@@ -38,23 +38,25 @@
 
             {% if request.user.is_authenticated %}
             <a class="col-1 align-self-center text-end" href="{% url 'settings' %}">
-                <img src="{% static '/images/avatar.jpg' %}" width="50px" height="50px" style="border-radius: 8px;">
+                <img src="{{ request.user.profile.avatar.url }}" width="50px" height="50px" style="border-radius: 8px;">
             </a>
             <div class="col-1 align-self-center text-start">
                 <a class="row text-start" style="padding: 0; color: black; text-decoration: none"
                    href="{% url 'settings' %}">
-                    {{ user.username }}
+                    {{ user.profile.login }}
                 </a>
-                <a class="row" style="color: #b80600; padding-bottom: 0; padding-top : 0" href="{% url 'logout' %}?continue={{ request.path }}">
+                <a class="row" style="color: #b80600; padding-bottom: 0; padding-top : 0"
+                   href="{% url 'logout' %}?continue={{ request.path }}?{{ request.GET.urlencode }}">
                     Выход
                 </a>
             </div>
             {% else %}
-            <a class="col-1 align-self-center text-end" href="{% url 'login' %}?continue={{ request.path }}">
+            <a class="col-1 align-self-center text-end"
+               href="{% url 'login' %}?continue={{ request.path }}?{{ request.GET.urlencode }}">
                 <button class="btn btn-primary">Вход</button>
             </a>
             <a class="col-1 align-self-center text-end"
-               href="{% url 'signup' %}">
+               href="{% url 'signup' %}?continue={{ request.path }}?{{ request.GET.urlencode }}">
                 <button class="btn btn-light">
                     Регистрация
                 </button>
@@ -109,6 +111,7 @@
         CodeResolve, 2023
     </div>
 </footer>
-<script src="{% static '/js/bootstrap.js' %}"></script>
+<script src="{% static 'js/bootstrap.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
